carrinho funcionando, além disso, agora tem um autenticador de sessão, pequenas mudanças feitas por todo o código, nada de muito relevante... Apenas o usuário e a senha do Banco de Dados postgres teve a senha e o usuário alterados ambos para 'postgres'

--- a/pw/src/main/resources/application.properties
+++ b/pw/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=pw
-server.port=8081
+server.port=8090
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/trabalhopw
+spring.datasource.username=pwuser
+spring.datasource.password=1234
+
